pkl-core/src/test/files/LanguageSnippetTests/input/errors/invalidModuleModifier.pkl
abstract module foo

amends "baseModule.pkl"
